# drone-import

./: .dockerignore  Dockerfile  README.md  config.example.yaml  install.sh  pyproject.toml  uninstall.sh
devices/: dji.yaml  hdzero.yaml
drone_import/: cli.py  compress.py  config.py  importer.py  jellyfin.py  merge.py  merge_cli.py
scripts/: drone-autoinsert  drone-sd-cleanup  merge-clips
systemd/: drone-import@.service
udev/: 99-drone-import.rules
