[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "drone-import"
version = "0.1.0"
description = "Automated drone footage importer for HDZero and DJI cameras"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.scripts]
drone-import = "drone_import.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_import*"]
